# powerbi-table-scraper

./: .gitignore  README.md  config.example.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
locales/: da.json  en.json
src/: config.py  gui.py  handler.py  save.py  scraper.py  usecase.py  utils.py
src/gui/: gui.py  gui_state.py  gui_utils.py  widget_loghandler.py
src/gui/widgets/: format_widget.py  log_widget.py  main_widget.py  path_widget.py  run_button.py  url_frame.py
src/scraper/: driver.py  filter_scraper.py  powerbi_scraper.py  table_scraper.py
